[package]
name = "avalanche_classifier"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.24"
eframe = "0.24"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
rfd = "0.12"
image = "0.24"
poll-promise = "0.3"
anyhow = "1.0"